--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,46 @@
 <html>
-    <head>
-        <title>Node Blog</title>
-    </head>
-    <body>
-        <h1>Node Blog</h1>
-        <% for(var i=0; i< posts.length; i++) {%>
-            <li>
-            <span><%= i %></span>            
-            <span><%= posts[i].title %></span>
-            <span><%= posts[i].img %></span>
-            <span><%= posts[i].text %></span>
-            <span><%= posts[i].date %></span>
-            <span><%= posts[i]._id %></span>
-            </li>
+
+<head>
+    <title>Node Blog</title>
+</head>
+
+<body>
+    <h1>Node Blog</h1>
+    <% for(var i=0; i< posts.length; i++) {%>
+        <li>
+            <span>
+                <%= i %>
+            </span>
+            <span>
+                <%= posts[i].title %>
+            </span>
+            <span>
+                <%= posts[i].img %>
+            </span>
+            <span>
+                <%= posts[i].text %>
+            </span>
+            <span>
+                <%= posts[i].date %>
+            </span>
+            <span>
+                <%= posts[i]._id %>
+            </span>
+        </li>
         <% } %>
-    </body>
+
+            <hr/>
+
+            <div>
+                <h2>Create a Post</h2>
+
+                <form action="/post" method="POST">
+                    <input type="text" placeholder="Title" name="name">
+                    <input type="text" placeholder="Text" name="text">
+                    <input type="text" placeholder="Img" name="img">
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+</body>
+
 </html>
