--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
                 <h2>Create a Post</h2>
 
                 <form action="/post" method="POST">
-                    <input type="text" placeholder="Title" name="name">
+                    <input type="text" placeholder="Title" name="title">
                     <input type="text" placeholder="Text" name="text">
                     <input type="text" placeholder="Img" name="img">
                     <button type="submit">Submit</button>
