working on infinite scroll

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,13 +67,7 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <hr />
-        <hr />
-        <hr />
-        <hr />
-        <hr />
-        <hr />
+      <div id="posts-container" class="col-lg-8 col-md-10 mx-auto">
       </div>
     </div>
   </div>
