Test inf scroll on heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Blog da Bia!</title>
+  <title>Tok-ah</title>
+
+  <meta property="og:url" content="https://tok-ah.herokuapp.com" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Toh-ka" />
+  <meta property="og:description" content="Blog de Arte" />
+  <meta property="og:image" content="" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
