--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,50 +2,78 @@
 
 <head>
     <title>Admin</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="/css/admin.css" rel="stylesheet">
 </head>
 
 <body>
     <h1>Admin</h1>
-    <% for(var i=0; i< posts.length; i++) {%>
-        <li>
-            <span>
-                <%= i %>
-            </span>
-            <span>
-                <%= posts[i].title %>
-            </span>
-            <span>
-                <%= posts[i].subTitle %>
-            </span>
-            <span>
-                <%= posts[i].img %>
-            </span>
-            <span>
-                <%= posts[i].text %>
-            </span>
-            <span>
-                <%= posts[i].date %>
-            </span>
-            <span>
-                <%= posts[i]._id %>
-            </span>
-        </li>
-        <% } %>
 
-            <hr/>
 
-            <div>
-                <h2>Create a Post</h2>
+    <div>
+        <h2>Create a Post</h2>
 
-                <form action="/post" method="POST" encType="multipart/form-data">
-                    <input type="text" placeholder="Title" name="title">
-                    <input type="text" placeholder="SubTitle" name="subTitle">
-                    <input type="text" placeholder="Text" name="text">
-                    <!-- <input type="text" placeholder="Img" name="img"> -->
-                    <input type="file" name="file" />
-                    <button type="submit">Submit</button>
-                </form>
+        <form id="post-form" action="/post" method="POST" encType="multipart/form-data">
+            <input type="text" placeholder="Title" name="title" id="title">
+            <input type="text" placeholder="Sub Title" name="subTitle" id="subTitle">
+            <input type="text" placeholder="Text" name="text" id="text">
+            <input type="file" name="img" id="img" />
+            <span id="status"></span>
+            <button id="submit" type="submit">Submit</button>
+        </form>
+        <br />
+    </div>
+
+    <hr/>
+
+    <div id="posts-container">
+        <% for(var i=0; i< posts.length; i++) {%>
+            <div class="post-preview">
+                <!-- <a href="post.html"> -->
+                    <h2 class="post-title">
+                        <%= posts[i].title %>
+                    </h2>
+                    <img style="width: 50px;" src="<%= posts[i].img %>" />
+                    <h3 class="post-subTitle">
+                        <%= posts[i].subTitle %>
+                    </h3>
+                <!-- </a> -->
+                <p class="post-meta">
+                    <%= posts[i].date %>
+                </p>
             </div>
+        <% } %>
+    </div>
+
+    <script id="post-template" type="text/template">
+        <div class="post-preview">
+            <a href="post.html">
+                <h2 class="post-title">
+                    {{title}}
+                </h2>
+                <img style="width: 50px;" src="{{img}}" />
+                <h3 class="post-subTitle">
+                    {{subTitle}}
+                </h3>
+            </a>
+            <p class="post-meta">
+                {{date}}
+            </p>
+        </div>
+    </script>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+    
+
+    <script type="text/javascript" src="/js/admin.js"></script>
+</body>
+</div>
 </body>
 
 </html>
