--- a/views/css/clean-blog.css
+++ b/views/css/clean-blog.css
@@ -6,8 +6,9 @@
 
 body {
   font-size: 20px;
-  color: #333333;
+  color: #ffffff;
   font-family: 'Lora', 'Times New Roman', serif;
+  background-color: #222222;
 }
 
 p {
