--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="/">Blog da Bia!</a>
+      <a class="navbar-brand" href="/">Tok-ah</a>
       <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -57,7 +57,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
@@ -125,7 +125,6 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
         </div>
       </div>
     </div>
@@ -134,13 +133,13 @@
   <!-- Templates -->
   <script id="post-template" type="text/template">
     <div class="post-preview" style="cursor: pointer;" href="#{{_id}}" data-toggle="modal">
-        <h2 class="post-title">
-          {{title}}
-        </h2>
-        <img class="img-fluid img-centered" src="{{img}}" alt="{{img}}" />
-        <h3 class="post-subTitle">
-          {{subTitle}}
-        </h3>
+      <h2 class="post-title">
+        {{title}}
+      </h2>
+      <img class="img-fluid img-centered" src="{{img}}" alt="{{img}}" />
+      <h3 class="post-subTitle">
+        {{subTitle}}
+      </h3>
       <p class="post-meta">
         {{date}}
       </p>
@@ -148,8 +147,8 @@
   </script>
   <script id="modal-template" type="text/template">
     <div class="portfolio-modal modal fade" id="{{_id}}" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
+      <div class="modal-dialog" style="max-width: 1000px;" role="document">
+        <div class="modal-content" style="background-color: #333333;">
           <div class="close-modal" data-dismiss="modal">
             <div class="lr">
               <div class="rl"></div>
@@ -170,7 +169,7 @@
                   <ul class="list-inline item-details">
                     <li>
                       <strong>
-                          {{date}}
+                        {{date}}
                       </strong>
                     </li>
                   </ul>
@@ -191,8 +190,8 @@
   <div id="Modals">
     <% for(var i=0; i< posts.length; i++) {%>
       <div class="portfolio-modal modal fade" id="<%= posts[i]._id %>" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
+        <div class="modal-dialog" style="max-width: 1000px;" role="document">
+          <div class="modal-content" style="background-color: #333333;">
             <div class="close-modal" data-dismiss="modal">
               <div class="lr">
                 <div class="rl"></div>
